# maquette-hub

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled Diagram.drawio  azure-pipeline.yml  backgrounds.idraw  build.gradle  komponenten.drawio  maquette.postman_collection.json  pom.xml
app/: pom.xml
core/: pom.xml
data-assets/: fill_assets.py
data-assets/.ipynb_checkpoints/: upload_datasets-checkpoint.ipynb
data-assets/maquette-datasets/: pyproject.toml
data-assets/maquette-datasets/maquette_datasets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data-assets/maquette-datasets/tests/: test_maquette_datasets.py
data-shop-api/: pom.xml
data-shop-impl/: pom.xml
data-shop-test/: .gitignore  pom.xml
docker/: docker-compose.yaml
docs/: architecture-overview.md
docs/architecture/: architecture-overview.md
docs/concepts/: data-shop.md
docs/guides/: client-configuration.md  projects-data_assets-sandboxes.md
hub/: .gitignore  build.gradle  settings.gradle
hub/config/: model-questionnaire.json
java-sdk/: build.gradle
maquette-cli/: __main__.spec  main.py  pyproject.toml
maquette-cli/maquette_cli/: README.md  __client.py  __environment.py  __main__.py
maquette-cli/maquette_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
maquette-py/: .gitignore  main.py  pyproject.toml  test.avro  unix_env.py
maquette-py/maquette/: __mq.py  __workspaces.py  cli.py
maquette-py/maquette_lib/: __client.py  __environment.py  __user_config.py
maquette-py/maquette_sdk/: __mq.py  mqpy-samples.ipynb
maquette-py/notebooks/: michaels-sample.ipynb
maquette-py/sample/: .gitignore  MLproject  MQ_Sample.ipynb  README.md  conda.yaml  mqpy_sdk_sample.py  pyproject.toml
maquette-py/sample/notebooks/: README.md
maquette-py/sample/reports/: README.md
maquette-py/sample/sample/: __init__.py
maquette-py/sample/sample/features/: __init__.py
maquette-py/sample/sample/train/: train_model.py
maquette-ui/: README.md  package-lock.json  package.json
model-development-api/: pom.xml
model-development-impl/: pom.xml
model-development-test/: pom.xml
model-management-api/: pom.xml
model-management-impl/: pom.xml
model-operations-impl/: pom.xml
model-operations-test/: pom.xml
services/: docker-compose.yml
services/maquette-data-explorer/: Dockerfile  README.md  config.yaml  pyproject.toml  run_server.sh  service.py
services/maquette-data-explorer/data_explorer/: data_analyzer.py  data_explorer.py
services/maquette-data-explorer/data_explorer/models/: request.py  response.py
services/maquette-data-explorer/tests/: test_service.py
services/maquette-data-explorer/tests/test_data_explorer/: test_data_explorer.py
services/maquette-shapash/: .gitignore  Dockerfile  pyproject.toml  service.py
services/maquette-shapash/tests/: test_service.py
stacks/: README.md
(+2248 files in other folders)
