[tool.poetry]
name = "maquette-cli"
version = "0.1.0"
description = "A command line interface for Maquette Data Science and Machine Learning Platform."
authors = ["Michael Wellner <michaelwellner@kpmg.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "3.8+"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
