[tool.poetry]
name = "maquette-datasets"
version = "0.1.0"
description = ""
authors = ["AiPunk <johannes.forster@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
maquette = {path = "../../maquette-py/dist/maquette-0.0.2-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
