[tool.poetry]
name = "maquette-data-explorer"
version = "0.1.0"
description = ""
authors = ["AiPunk <johannes.forster@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
maquette-py = {path = "../../maquette-py/dist/maquette_py-0.0.1-py3-none-any.whl"}
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
