[tool.poetry]
name = "maquette-shapash"
version = "0.1.0"
description = ""
authors = ["AiPunk <johannes.forster@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
maquette = "0.1.2"
shapash = "^1.2.0"
llvmlite = "^0.34.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
